applications/oauth2-proxy-longhorn/middleware-oauth-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-oauth-redirect
  namespace: longhorn-system
spec:
  forwardAuth:
    address: http://oauth2-proxy-longhorn.longhorn-system.svc.cluster.local:80
    authResponseHeaders:
    - X-Auth-Request-Access-Token
    - Authorization
    maxBodySize: 1048576
    maxResponseBodySize: 1048576
    trustForwardHeader: true
